--- a/css/styles.scss
+++ b/css/styles.scss
@@ -18,7 +18,7 @@ body {
     margin: 0;
     padding: 0;
     min-height:350px;
-    height: 80vh;
+    height: 60vh;
 }
 
 .bg.home {
@@ -29,24 +29,29 @@ body {
 }
 
 .bg.website-design {
-    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url($baseurl + "/images/home-background.jpg") no-repeat center;
+    background: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url($baseurl + "/images/website-design-background.jpg") no-repeat center;
     background-size: cover;
 }
 
 .bg.seo {
-    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url($baseurl + "/images/home-background.jpg") no-repeat center;    
+    background: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url($baseurl + "/images/search-engine-optimization-background.jpg") no-repeat center;    
     background-size: cover;
 }
 
-.bg.digital-marketing {
-    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url($baseurl + "/images/home-background.jpg") no-repeat center;    
+.bg.pay-per-click-marketing {
+    background: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url($baseurl + "/images/pay-per-click-marketing-background.jpg") no-repeat center;    
     background-size: cover;
 }
 
-.bg.blog {
-    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url($baseurl + "/images/home-background.jpg") no-repeat center;
+.bg.contact-us, .bg.thank-you {
+    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url($baseurl + "/images/contact-us-background.jpg") no-repeat center;    
     background-size: cover;
 }
+
+// .bg.blog {
+//     background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url($baseurl + "/images/home-background.jpg") no-repeat center;
+//     background-size: cover;
+// }
 
 .Why {
     background:#f0f0f0;
@@ -79,14 +84,6 @@ body {
     height:auto;
 }
 
-// .shadow {
-//     box-shadow: 0px 0px 5px silver;
-// }
-
-// .shadowLight {
-//     box-shadow: 0px 0px 30px silver;
-// }
-
 .banner h2 a {
     text-decoration: none;
     color: white;
@@ -109,6 +106,16 @@ h3 {
     margin: 0;
     line-height: 6vw;
     color: #767376;
+}
+
+h3 a {
+   color:inherit;
+    text-decoration: none;
+}
+
+h3 a:hover {
+    color:inherit;
+    text-decoration: none;
 }
 
 h4 {
@@ -184,13 +191,6 @@ h2.splash span {
     // color: #4F4D4F;
 }
 
-// .logoContainer {
-//     display:flex;
-//     flex-direction: column;
-//     justify-content: center;
-//     height:100%;
-// }
-
 .logo {
     height:14vw;
     width:auto;
@@ -253,6 +253,10 @@ ul.blog h2 {
     text-align: center;
 }
 
+.serviceDetail h3 {
+    padding: 1.5vw;
+}
+
 .serviceHeading {
     padding: 4.5vw 1.825vw;
     text-align: center;
@@ -290,12 +294,6 @@ ul.blog h2 {
 .serviceIcon {
     width: 25vw;
 }
-
-// .telNumber {
-//     position: relative;
-//     display: inline-block;
-//     vertical-align: middle;
-// }
 
 .footerImg {
     width: 80%;
@@ -357,7 +355,6 @@ ul.blog h2 {
 
 p.bold {
     line-height: 0.5;
-    // padding:1vw 0;
 }
 
 .underline {
@@ -383,21 +380,9 @@ p.bold {
     text-decoration: none;
 }
 
-// .scrollFix {
-//     overflow: hidden !important;
-//     white-space: nowrap;
-//     line-height: 1.35;
-// }
-
 #map {
-    // border-top:1px solid grey;
     width: 100%;
     height: 50vh;
-
-}
-
-#map h3 {
-    color:red;
 }
 
 #map img {
@@ -406,13 +391,11 @@ height:0;
 }
 
 .mapBox {
-    // width:100%;
     display:flex;
     flex-direction: row;
-    // justify-content: space-between;
 }
 
-// Remove Google Maps footer text
+{% comment %} ********** REMOVE GOOGLE MAPS FOOTER TEXT ********** {% endcomment %}
 a[href^="http://maps.google.com/maps"]{display:none !important}
 a[href^="https://maps.google.com/maps"]{display:none !important}
 
@@ -423,7 +406,7 @@ a[href^="https://maps.google.com/maps"]{display:none !important}
     background:none !important;
 }
 
-// Menu
+{% comment %} ********** MENU ********** {% endcomment %}
 
 .oldNavWrapper {
     position:fixed;
@@ -463,14 +446,14 @@ a[href^="https://maps.google.com/maps"]{display:none !important}
     position: relative;
     // padding: 0.5vw 0;
     // padding-top: 5px;
-    padding: 0.5vw 0;
+    // padding: 0.5vw 0;
+    
 }
 
 .oldNav ul li a {
     color: white;
     text-decoration: none;
-    // padding-bottom: 5px;
-    // padding-top: 20px;
+padding:0.6vw 0;
 }
 
 .oldNav ul li a:hover {
@@ -481,14 +464,14 @@ a[href^="https://maps.google.com/maps"]{display:none !important}
 .oldNav ul li ul {
     display: none;
     position: absolute;
-    top: 2.75vw;
+    top: 3vw;
     left: -1vw;
     background-color: white;
     width: 10vw;
     padding: 0;
     margin: 0;
     // z-index: 5;
-    border-radius: 0.3vw;
+    border-radius: 0.2vw;
 }
 
 .oldNav ul li:hover ul {
@@ -567,7 +550,7 @@ a[href^="https://maps.google.com/maps"]{display:none !important}
     position: relative;
     // padding-top: 5px;
     color:grey;
-    padding: 0.5vw 0;
+    // padding: 0.5vw 0;
 }
 
 .newNav ul li a {
@@ -579,7 +562,7 @@ a[href^="https://maps.google.com/maps"]{display:none !important}
 
     // color: white;
     text-decoration: none;
-
+    padding:0.6vw 0;
 }
 
 
@@ -597,14 +580,14 @@ a[href^="https://maps.google.com/maps"]{display:none !important}
     // border-radius: 3px;
     display: none;
     position: absolute;
-    top: 2.75vw;
+    top: 3vw;
     left: -1vw;
     background-color: white;
     width: 10vw;
     padding: 0;
     margin: 0;
     // z-index: 5;
-    border-radius: 0.3vw;
+    border-radius: 0.2vw;
 }
 
 .newNav ul li:hover ul {
@@ -641,17 +624,30 @@ a[href^="https://maps.google.com/maps"]{display:none !important}
 
 .slideNewNavDown {
     transition: transform 0.5s;
-    transform: translateY(13.9vw);
+    transform: translateY(13.95vw);
 }
 
-// .hvr-underline-from-left:before {
-//     background: #4286f4;
-//     height: 2px;
-//     -webkit-transition-duration: 0.4s;
-//     transition-duration: 0.4s;
-//     -webkit-transition-timing-function: ease;
-//     transition-timing-function: ease;
-// }
+.hvr-underline-from-left:before {
+    background: $bluecolor;
+    height: 4px;
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+    -webkit-transition-timing-function: ease;
+    transition-timing-function: ease;
+    // margin-top:10px;
+    // padding-top:10px;
+}
+
+.hvr-underline-from-none:before {
+    background: inherit;
+    height: 4px;
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+    -webkit-transition-timing-function: ease;
+    transition-timing-function: ease;
+    // margin-top:10px;
+    // padding-top:10px;
+}
 
 .eqHeight {
     display: -webkit-box;
@@ -705,9 +701,32 @@ a[href^="https://maps.google.com/maps"]{display:none !important}
 
 .copyright ul li a {
     color: #eee;
-    -webkit-transition: color 0.5s;
+    -webkit-transition: color 0.4s;
     /* Safari */
-    transition: color 0.5s;
+    transition: color 0.4s;
+}
+
+.footerCols p a {
+    color:$bluecolor;
+    text-decoration: none;
+}
+
+.footerCols p a:hover {
+    color:$bluecolor;
+    text-decoration: none;
+}
+
+.footerCols p a i{
+    font-size:2.8vw;
+    color: grey;
+    -webkit-transition: color 0.4s;
+    /* Safari */
+    transition: color 0.4s;
+    padding-right:1vw;
+}
+
+.footerCols p a i:hover {
+    color: $bluecolor;
 }
 
 .copyright ul li a:hover {
@@ -748,9 +767,9 @@ a[href^="https://maps.google.com/maps"]{display:none !important}
     font-size: 3.5vw;
 }
 
-.footerCols p span:first-child {
-    padding-top: 4.5vw;
-}
+// .footerCols p span:first-child {
+//     padding-top: 4.5vw;
+// }
 
 #map p span {
     display:block;
@@ -844,20 +863,106 @@ a[href^="https://maps.google.com/maps"]{display:none !important}
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    outline: none;
 }
 
 .inputField {
     width: 49%;
-    font-size: 1.2vw;
-    padding: 0.5vw;
+    font-size: 2vw;
+    padding:0.1vw 0.5vw;
+    border:0.2vw solid lightgrey;
+    border-radius:0.5vw;
+    outline: none;
 }
 
 .textBox {
     margin-top: 15px;
     width: 100%;
-    font-size: 1.2vw;
-    padding: 0.5vw;
+    font-size: 2vw;
+    padding:0.1vw 0.5vw;
+    border:0.2vw solid lightgrey;
+    border-radius:0.5vw;
+    outline: none;
 }
+
+input[type=submit] {
+    background: inherit;
+    padding:0.1vw 0.5vw;
+    border:0.2vw solid $bluecolor;
+    border-radius:0.5vw;
+    // z-index: 500;
+    -webkit-transition: background color 0.4s; /* Safari */
+    transition: background color 0.4s;    
+    font-size:2vw;
+}
+
+input[type=submit]:hover {
+    background:$bluecolor;
+    color:white;
+}
+
+input[type=submit] a {
+    color:inherit;
+    -webkit-transition: color 0.4s; /* Safari */
+    transition: color 0.4s;    
+}
+
+input[type=submit] a:hover {
+    color:white;
+}
+
+
+
+
+
+button {
+    // color: red;
+    background: none;
+    padding:0.1vw 0.5vw;
+    border:0.2vw solid white;
+    border-radius:0.5vw;
+    -webkit-transition: background 0.4s; /* Safari */
+    transition: background 0.4s;
+    outline:none;
+}
+
+button:hover {
+    background:$bluecolor;
+    // border:0.2vw solid $bluecolor;
+}
+
+#bottomScroll {
+    background: inherit;
+    padding:0.1vw 0.5vw;
+    border:0.2vw solid $bluecolor;
+    border-radius:0.5vw;
+    // z-index: 500;
+    -webkit-transition: background color 0.4s; /* Safari */
+    transition: background color 0.4s;    
+}
+
+#bottomScroll:hover {
+    background:$bluecolor;
+    color:white;
+    // border:0.2vw solid $bluecolor;
+}
+
+#bottomScroll a {
+    color:inherit;
+    -webkit-transition: color 0.4s; /* Safari */
+    transition: color 0.4s;    
+}
+
+#bottomScroll a:hover {
+    color:white;
+}
+
+// #bottomSplash {
+//     background: $bluecolor;
+//     padding:0.6vw;
+//     border:0.2vw solid white;
+//     border-radius:0.5vw;
+// }
 
 @media all {
     .oldNav>ul>li:last-child {
@@ -882,7 +987,7 @@ a[href^="https://maps.google.com/maps"]{display:none !important}
     top: -8.1vw;
     }
     .slideNewNavDown {
-        transform: translateY(8vw);
+        transform: translateY(8.05vw);
     }
     h1.splash {
         font-size: 5.4vw;
@@ -906,6 +1011,32 @@ a[href^="https://maps.google.com/maps"]{display:none !important}
     background-size: cover;
 }
 
+.bg.website-design {
+    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url($baseurl + "/images/website-design-background.jpg") no-repeat center;
+    background-size: cover;
+}
+
+.bg.seo {
+    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url($baseurl + "/images/search-engine-optimization-background.jpg") no-repeat center;    
+    background-size: cover;
+}
+
+.bg.pay-per-click-marketing {
+    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url($baseurl + "/images/pay-per-click-marketing-background.jpg") no-repeat center;    
+    background-size: cover;
+}
+
+.bg.contact-us, .bg.thank-you {
+    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url($baseurl + "/images/contact-us-background.jpg") no-repeat center;    
+    background-size: cover;
+}
+
+// .bg.blog {
+//     background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url($baseurl + "/images/home-background.jpg") no-repeat center;
+//     background-size: cover;
+// }
+
+
 .logo, .oldNavWrapper, .oldNav, .newNavWrapper, .newNav {
         height:7.5vw;
     }
@@ -913,7 +1044,7 @@ a[href^="https://maps.google.com/maps"]{display:none !important}
     top: -7.5vw;
     }
     .slideNewNavDown {
-        transform: translateY(7.4vw);
+        transform: translateY(7.45vw);
     }
     h1.splash {
         font-size: 5vw;
@@ -926,15 +1057,22 @@ a[href^="https://maps.google.com/maps"]{display:none !important}
 }
 
 @media (min-width: 992px) {
+    .hvr-underline-from-left:before, .hvr-underline-from-none:before {
+        height: 0.2vw;
+    }
+    .eqHeight.reversible {
+            flex-direction: row-reverse;
+        }
+
+    .serviceDetail h3 {
+        padding: 0.5vw;
+        padding-left:0;
+    }
+
     .serviceText.serviceSpace p{
         padding-top: 0;
         padding-bottom:0;
     }
-
-    
-    // .mapBox h3 {
-    //     font-size:1vw;
-    // }
 
     #map p span {
         // display:block;
@@ -946,11 +1084,6 @@ a[href^="https://maps.google.com/maps"]{display:none !important}
         height:6vw;
     }
 
-    // .mapBox{
-    // align-items: row;
-    // }
-
-
     .logo, .oldNavWrapper, .oldNav, .newNavWrapper, .newNav {
         height:4.875vw;
     }
@@ -958,7 +1091,7 @@ a[href^="https://maps.google.com/maps"]{display:none !important}
     top: -4.875vw;
     }
     .slideNewNavDown {
-        transform: translateY(4.7vw);
+        transform: translateY(4.87vw);
     }
     h1.splash {
         font-size: 3.25vw;
@@ -1064,9 +1197,6 @@ a[href^="https://maps.google.com/maps"]{display:none !important}
         font-size: 1.875vw;
         padding: 2.25vw 0;
     }
-    .footerCols p span:first-child {
-        padding-top: 2.25vw;
-    }
     .footerCols p {
         font-size: 1.2vw;
         line-height: 2vw;
@@ -1122,7 +1252,7 @@ a[href^="https://maps.google.com/maps"]{display:none !important}
 
 @media (min-width: 1200px) {}
 
-// Hamburger
+{% comment %} ********** HAMBURGER ********** {% endcomment %}
 .bar1, .bar2, .bar3 {
     width: 28px;
     height: 4px;
@@ -1142,4 +1272,11 @@ a[href^="https://maps.google.com/maps"]{display:none !important}
 
 .change .bar3 {
     transform: translate3d(8px, -4px, 0) rotate(-45deg) scale(0.7, 1);
+}
+
+.phone {
+    width:50px;
+    height:auto;
+    float:right;
+    padding:2vw;
 }
