--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,34 +1,45 @@
 <div id="map"></div>
 <div class="body-container">
 	<div class="banner">
-		<h2 class="toUpper bold">Call us to book a free 30 minute consultation at <span style="white-space: nowrap;">{% include telnumberlink.html %}</span></h2>
+		<h2 class="toUpper bold">Call us to book a free 30 minute consultation at
+			<span style="white-space: nowrap;">{% include telnumberlink.html %}</span>
+		</h2>
 	</div>
 	<div class="row eqHeight footerRow">
 		<div class="col-xs-12 col-md-3 footerCols">
 			<p class="bold">About Us</p>
-			<!-- <p><img src="{{ site.baseurl }}/images/fivestarlogobefore.svg" height="60px"></p>						 -->
 			<p>Fivestar Media is a Canadian startup digital consulting agency with offices in Toronto and Brampton.</p>
 			<p>Our objective is to use the best and latest web technologies to position our clients for long-term success on the internet.</p>
 			<p>We believe that doing an outstanding job for our clients will bring them success and our own success will follow.</p>
 		</div>
 		<div class="col-xs-12 col-md-3 footerCols">
 			<p class="bold">Services</p>
-			<p><a href="{{ site.baseurl }}/website-design/">Website Design</a></p>
-			<p><a href="{{ site.baseurl }}/search-engine-optimization-seo/">Search Engine Optimization</a></p>
-			<p><a href="{{ site.baseurl }}/pay-per-click-marketing/">Pay-per-click Marketing</a></p>
+			<p>
+				<a href="{{ site.baseurl }}/website-design/">Website Design</a>
+			</p>
+			<p>
+				<a href="{{ site.baseurl }}/search-engine-optimization-seo/">Search Engine Optimization</a>
+			</p>
+			<p>
+				<a href="{{ site.baseurl }}/pay-per-click-marketing/">Pay-per-click Marketing</a>
+			</p>
 			{% include socialmedia.html %}
 		</div>
 		<div class="col-xs-12 col-md-3 footerCols">
 			<p class="bold">Toronto Office</p>
-			<!-- <div class="footerImg">
-				<img src="{{ site.baseurl }}/images/sheppard.jpg">
-			</div> -->
-			<p><span>4711 Yonge Street, 10th Floor</span><span>Toronto, ON</span><span>M2N 6K8, Canada</span><span>{% include telnumbertextlong.html %}</span></p>
+			<p>
+				<span>4711 Yonge Street, 10th Floor</span>
+				<span>Toronto, ON</span>
+				<span>M2N 6K8, Canada</span>
+				<span>{% include telnumbertextlong.html %}</span>
+			</p>
 			<p class="bold">Brampton Office</p>
-			<!-- <div class="footerImg">
-				<img src="{{ site.baseurl }}/images/brampton.jpg">
-			</div> -->
-			<p><span>2 County Court Blvd., Suite 400</span><span>Brampton, ON</span><span>L6W 3W8, Canada</span><span>{% include telnumbertextlong.html %}</span></p>
+			<p>
+				<span>2 County Court Blvd., Suite 400</span>
+				<span>Brampton, ON</span>
+				<span>L6W 3W8, Canada</span>
+				<span>{% include telnumbertextlong.html %}</span>
+			</p>
 		</div>
 
 		<div class="col-xs-12 col-md-3 footerCols">
@@ -71,34 +82,8 @@
 	</div>
 	<div class="row eqHeight copyrightRow">
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 copyright">
-			<!-- <p>© 2017 Fivestar Media Inc. | <a href="{{ site.baseurl }}/sitemaps.xml">Sitemap</a></p> -->
 			<p>© 2017 Fivestar Media Inc.</p>
 		</div>
-		<!-- <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 copyright">
-			<ul>
-				<li>
-					<a href="https://twitter.com/FivestarMediaHQ"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-				</li>
-				<li>
-					<a href="https://facebook.com/FivestarMediaHQ"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
-
-				</li> -->
-				<!-- <li>
-					<a href="#"><i class="fa fa-google-plus-official" aria-hidden="true"></i></a>
-
-				</li> -->
-				<!-- <li>
-					<a href="https://www.linkedin.com/in/FivestarMediaHQ"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-
-				</li> -->
-				<!-- <li>
-					<a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
-				</li>
-				<li>
-					<a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-				</li> -->
-			<!-- </ul>
-		</div> -->
 	</div>
 </div>
 <script src="{{ site.baseurl }}/js/scripts.js"></script>
