--- a/_includes/socialmedia.html
+++ b/_includes/socialmedia.html
@@ -1,4 +1,13 @@
 <p class="bold">Social Media</p>
-<p><a href="https://facebook.com/FivestarMediaHQ" target="_blank"><i class="fa fa-facebook-official" aria-hidden="true"></i>Facebook</a></p>
-<p><a href="https://twitter.com/FivestarMediaHQ" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i>Twitter</a></p>
-<p><a href="https://www.linkedin.com/in/FivestarMediaHQ" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i>LinkedIn</a></p>
+<p>
+    <a href="https://facebook.com/FivestarMediaHQ" target="_blank">
+        <i class="fa fa-facebook-official" aria-hidden="true"></i>Facebook</a>
+</p>
+<p>
+    <a href="https://twitter.com/FivestarMediaHQ" target="_blank">
+        <i class="fa fa-twitter" aria-hidden="true"></i>Twitter</a>
+</p>
+<p>
+    <a href="https://www.linkedin.com/in/FivestarMediaHQ" target="_blank">
+        <i class="fa fa-linkedin" aria-hidden="true"></i>LinkedIn</a>
+</p>
