--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -11,15 +11,13 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="default">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-color/2.1.2/jquery.color.min.js"></script>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+	<link rel="stylesheet" href="{{ site.baseurl }}/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
 	    crossorigin="anonymous">
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-	    crossorigin="anonymous"></script>
+	<script src="{{ site.baseurl }}/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/hover.css">
 	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/styles.css">
+	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/font-awesome.min.css">
 	{% include icons.html %}
-	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	<!-- <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet"> -->
 	{% include analytics.html %}
 </head>
 {{ content }}
