--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -11,8 +11,7 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="default">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-color/2.1.2/jquery.color.min.js"></script>
-	<link rel="stylesheet" href="{{ site.baseurl }}/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-	    crossorigin="anonymous">
+	<link rel="stylesheet" href="{{ site.baseurl }}/css/bootstrap.min.css">
 	<script src="{{ site.baseurl }}/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/hover.css">
 	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/styles.css">
