--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -9,10 +9,10 @@
 	<meta name="msapplication-navbutton-color" content="#4286f4">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="default">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-color/2.1.2/jquery.color.min.js"></script>
-	<link rel="stylesheet" href="{{ site.baseurl }}/css/bootstrap.min.css">
+	<script src="{{ site.baseurl }}/js/jquery-3.2.1.min.js"></script>
+	<script src="{{ site.baseurl }}/js/jquery.color-2.1.2.min.js"></script>
 	<script src="{{ site.baseurl }}/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/hover.css">
 	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/styles.css">
 	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/font-awesome.min.css">
