--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -81,8 +81,10 @@
 		</div>
 	</div>
 	<div class="row eqHeight copyrightRow">
-		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 copyright">
-			<p>© 2017 Fivestar Media Inc.</p>
+		<div class="col-xs-12 copyright">
+			<p>© <script>var today = new Date();
+				var year = today.getFullYear();
+				document.write(year);</script> Fivestar Media Inc.</p>
 		</div>
 	</div>
 </div>
