--- a/css/styles.scss
+++ b/css/styles.scss
@@ -3,6 +3,7 @@
 $baseurl: "{{ site.baseurl }}";
 $bluecolor: #4286f4;
 $thankyoucolor: orange;
+$errorcolor: crimson;
 
 body {
     font-family: 'PT Sans', sans-serif;
