--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,7 +33,7 @@
 				<span>M2N 6K8, Canada</span>
 				<span>{% include telnumbertextlong.html %}</span>
 			</p>
-			<p class="bold">Brampton Office</p>
+			<p class="bold spacer">Brampton Office</p>
 			<p>
 				<span>2 County Court Blvd., Suite 400</span>
 				<span>Brampton, ON</span>
@@ -41,7 +41,6 @@
 				<span>{% include telnumbertextlong.html %}</span>
 			</p>
 		</div>
-
 		<div class="col-xs-12 col-md-3 footerCols">
 			<p class="bold">Our Expertise</p>
 			<ul>
