--- a/_includes/socialmedia.html
+++ b/_includes/socialmedia.html
@@ -1,4 +1,4 @@
-<p class="bold">Social Media</p>
+<p class="bold bigSpacer">Social Media</p>
 <p>
     <a href="https://facebook.com/FivestarMediaHQ" target="_blank">
         <i class="fa fa-facebook-official" aria-hidden="true"></i>Facebook</a>
