--- a/_includes/footermapless.html
+++ b/_includes/footermapless.html
@@ -10,17 +10,20 @@
 			<p>We believe that doing an outstanding job for our clients will bring them success and our own success will follow.</p>
 		</div>
 		<div class="col-xs-12 col-md-3 footerCols">
-			<p class="bold">Services</p>
-			<p><a href="{{ site.baseurl }}/website-design/">Website Design</a></p>
-			<p><a href="{{ site.baseurl }}/search-engine-optimization-seo/">Search Engine Optimization</a></p>
-			<p><a href="{{ site.baseurl }}/pay-per-click-marketing/">Pay-per-click Marketing</a></p>
-			{% include socialmedia.html %}
-		</div>
-		<div class="col-xs-12 col-md-3 footerCols">
-			<p class="bold">Toronto Office</p>
-			<p><span>4711 Yonge Street, 10th Floor</span><span>Toronto, ON</span><span>M2N 6K8, Canada</span><span>{% include telnumbertextlong.html %}</span></p>
-			<p class="bold">Brampton Office</p>
-			<p><span>2 County Court Blvd., Suite 400</span><span>Brampton, ON</span><span>L6W 3W8, Canada</span><span>{% include telnumbertextlong.html %}</span></p>
+				<p class="bold">Toronto Office</p>
+				<p>
+					<span>4711 Yonge Street, 10th Floor</span>
+					<span>Toronto, ON</span>
+					<span>M2N 6K8, Canada</span>
+					<span>{% include telnumbertextlong.html %}</span>
+				</p>
+				<p class="bold spacer">Brampton Office</p>
+				<p>
+					<span>2 County Court Blvd., Suite 400</span>
+					<span>Brampton, ON</span>
+					<span>L6W 3W8, Canada</span>
+					<span>{% include telnumbertextlong.html %}</span>
+				</p>
 		</div>
 		<div class="col-xs-12 col-md-3 footerCols">
 			<p class="bold">Our Expertise</p>
