--- a/_includes/footermaplesshelpless.html
+++ b/_includes/footermaplesshelpless.html
@@ -7,6 +7,19 @@
 			<p>We believe that doing an outstanding job for our clients will bring them success and our own success will follow.</p>
 		</div>
 		<div class="col-xs-12 col-md-3 footerCols">
+			<p class="bold">Services</p>
+			<p>
+				<a href="{{ site.baseurl }}/website-design/">Website Design</a>
+			</p>
+			<p>
+				<a href="{{ site.baseurl }}/search-engine-optimization-seo/">Search Engine Optimization</a>
+			</p>
+			<p>
+				<a href="{{ site.baseurl }}/pay-per-click-marketing/">Pay-per-click Marketing</a>
+			</p>
+			{% include socialmedia.html %}
+		</div>
+		<div class="col-xs-12 col-md-3 footerCols">
 				<p class="bold">Toronto Office</p>
 				<p>
 					<span>4711 Yonge Street, 10th Floor</span>
